# web_applications_django

./: docker-compose.yaml  pyproject.toml
taskmanager/accounts/: urls.py  views.py
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  converters.py  forms.py  middlewares.py  mixins.py  models.py  services.py  urls.py  views.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20240909_1948.py  0003_epic_task_epic_sprint.py  0004_sprint_start_date_before_end_date.py  0005_alter_task_table_comment_task_status_check.py  0006_task_file_upload_task_image_upload.py  0007_alter_task_owner.py
taskmanager/tasks/templatetags/: tasks_filters.py
taskmanager/templates/: 404.html
taskmanager/templates/accounts/: custom_password_reset_email.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_done.html  password_reset_form.html  register.html
taskmanager/templates/tasks/: _footer.html  _header.html  base.html  contact_form.html  contact_success.html  home.html  task_confirm_delete.html  task_detail.html  task_form.html
