[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["JoseRabal <jrabal.segura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
